k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hms-backend-service
  namespace: default
  labels:
    app: hms-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: hms-backend
